[package]
name = "archiver"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = ["default"] }
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "6.0"

[features]
default = ["gui"]
gui = []